# todo-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
migrations/2025-07-03-090921_create_todo/: up.sql
src/: connection.rs  lib.rs  main.rs
src/db/: models.rs  schema.rs
src/models/: request.rs  response.rs
ui/: next.config.mjs  package.json
ui/app/: layout.tsx  page.tsx
ui/components/: alert-system.tsx  progress-bar.tsx  task-filters.tsx  task-input.tsx  task-item.tsx  task-list.tsx
ui/hooks/: use-alerts.tsx  use-tasks.tsx
ui/types/: task.ts
