[package]
name = "todo-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
diesel = { version = "2.2.11", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
mime_guess = "2.0.5"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
